added documentation and minor fixes

--- a/documents/report.tex
+++ b/documents/report.tex
@@ -28,7 +28,7 @@
 \tableofcontents
 
 \section{Introduction}
-	Fang un è un figo \cite{Fang}
+	Fang... \cite{Fang}
 
 \section{Results}
 \subsection{One-dimensional Cases}
