added the report of the first part. FEM applications coming soon, stay tuned ....

--- a/documents/bibliografia.bib
+++ b/documents/bibliografia.bib
@@ -52,3 +52,12 @@ volume = {12},
 journal = {J. ACM},
 doi = {10.1145/321296.321305}
 }
+
+@book{Quarteroni,
+author = {Gervasio, Paola and Quarteroni, Alfio and Sacco, Riccardo and Saleri, Fausto},
+year = {2014},
+month = {02},
+pages = {},
+title = {Matematica Numerica},
+isbn = {978-88-470-5644-2}
+}
