alternating method, parameter testing for gauss seidel

--- a/documents/Include/gauss.tex
+++ b/documents/Include/gauss.tex
@@ -86,31 +86,33 @@
 \begin{picture}(5668.00,2834.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%%
-      \put(1342,863){\makebox(0,0)[r]{\strut{}$1\times10^{-10}$}}%
-      \put(1342,1181){\makebox(0,0)[r]{\strut{}$1\times10^{-8}$}}%
-      \put(1342,1499){\makebox(0,0)[r]{\strut{}$1\times10^{-6}$}}%
-      \put(1342,1818){\makebox(0,0)[r]{\strut{}$0.0001$}}%
-      \put(1342,2136){\makebox(0,0)[r]{\strut{}$0.01$}}%
-      \put(1342,2454){\makebox(0,0)[r]{\strut{}$1$}}%
+      \put(1342,704){\makebox(0,0)[r]{\strut{}$1\times10^{-12}$}}%
+      \put(1342,1051){\makebox(0,0)[r]{\strut{}$1\times10^{-10}$}}%
+      \put(1342,1398){\makebox(0,0)[r]{\strut{}$1\times10^{-8}$}}%
+      \put(1342,1745){\makebox(0,0)[r]{\strut{}$1\times10^{-6}$}}%
+      \put(1342,2092){\makebox(0,0)[r]{\strut{}$0.0001$}}%
+      \put(1342,2439){\makebox(0,0)[r]{\strut{}$0.01$}}%
       \put(1474,484){\makebox(0,0){\strut{}$0$}}%
-      \put(2107,484){\makebox(0,0){\strut{}$5$}}%
-      \put(2740,484){\makebox(0,0){\strut{}$10$}}%
-      \put(3373,484){\makebox(0,0){\strut{}$15$}}%
-      \put(4005,484){\makebox(0,0){\strut{}$20$}}%
-      \put(4638,484){\makebox(0,0){\strut{}$25$}}%
-      \put(5271,484){\makebox(0,0){\strut{}$30$}}%
+      \put(1949,484){\makebox(0,0){\strut{}$10$}}%
+      \put(2423,484){\makebox(0,0){\strut{}$20$}}%
+      \put(2898,484){\makebox(0,0){\strut{}$30$}}%
+      \put(3373,484){\makebox(0,0){\strut{}$40$}}%
+      \put(3847,484){\makebox(0,0){\strut{}$50$}}%
+      \put(4322,484){\makebox(0,0){\strut{}$60$}}%
+      \put(4796,484){\makebox(0,0){\strut{}$70$}}%
+      \put(5271,484){\makebox(0,0){\strut{}$80$}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%%
       \put(209,1658){\rotatebox{-270}{\makebox(0,0){\strut{}Residual}}}%
       \put(3372,154){\makebox(0,0){\strut{}Iteration \#}}%
       \csname LTb\endcsname%%
-      \put(4284,2440){\makebox(0,0)[r]{\strut{}Fixed-point iterations}}%
+      \put(2461,1097){\makebox(0,0)[l]{\strut{}Gauss-Seidel iterations}}%
       \csname LTb\endcsname%%
-      \put(4284,2220){\makebox(0,0)[r]{\strut{}Anderson algorithm}}%
+      \put(2461,877){\makebox(0,0)[l]{\strut{}Anderson algorithm}}%
     }%
     \gplbacktext
-    \put(0,0){\includegraphics{simple_example_residuals}}%
+    \put(0,0){\includegraphics{./Include/gauss}}%
     \gplfronttext
   \end{picture}%
 \endgroup
