nonlinear example, to be improved still, and final report

--- a/documents/Include/bibliografia.bib
+++ b/documents/Include/bibliografia.bib
@@ -67,3 +67,8 @@ author="Luca Formaggia",
 url="https://github.com/pacs-course/pacs-examples/tree/master/Examples/src/HeatExchange",
 addendum = "(accessed: 04.02.2021)"
 }
+
+@online{stack,
+url="https://stackoverflow.com/questions/478898/how-do-i-execute-a-command-and-get-the-output-of-the-command-within-c-using-po",
+addendum = "(accessed: 04.02.2021)"
+}
