--- a/documents/Include/nonlinear.tex
+++ b/documents/Include/nonlinear.tex
@@ -92,16 +92,11 @@
       \put(1210,2040){\makebox(0,0)[r]{\strut{}$0.01$}}%
       \put(1210,2422){\makebox(0,0)[r]{\strut{}$1$}}%
       \put(1342,484){\makebox(0,0){\strut{}$0$}}%
-      \put(1735,484){\makebox(0,0){\strut{}$5$}}%
-      \put(2128,484){\makebox(0,0){\strut{}$10$}}%
-      \put(2521,484){\makebox(0,0){\strut{}$15$}}%
-      \put(2914,484){\makebox(0,0){\strut{}$20$}}%
-      \put(3307,484){\makebox(0,0){\strut{}$25$}}%
-      \put(3699,484){\makebox(0,0){\strut{}$30$}}%
-      \put(4092,484){\makebox(0,0){\strut{}$35$}}%
-      \put(4485,484){\makebox(0,0){\strut{}$40$}}%
-      \put(4878,484){\makebox(0,0){\strut{}$45$}}%
-      \put(5271,484){\makebox(0,0){\strut{}$50$}}%
+      \put(2128,484){\makebox(0,0){\strut{}$5$}}%
+      \put(2914,484){\makebox(0,0){\strut{}$10$}}%
+      \put(3699,484){\makebox(0,0){\strut{}$15$}}%
+      \put(4485,484){\makebox(0,0){\strut{}$20$}}%
+      \put(5271,484){\makebox(0,0){\strut{}$25$}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%%
@@ -114,7 +109,7 @@
       \csname LTb\endcsname%%
       \put(4284,2000){\makebox(0,0)[r]{\strut{}Anderson iterations}}%
       \csname LTb\endcsname%%
-      \put(4284,1780){\makebox(0,0)[r]{\strut{}Alternating Anderson iterations}}%
+      \put(4284,1780){\makebox(0,0)[r]{\strut{}Newton-Anderson}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{nonlinear}}%
